# nomadbsd-dmconfig

./: CMakeLists.txt  defs.h.in  nomadbsd-dmconfig-gui.desktop
locale/: nomadbsd-dmconfig-gui_ar.ts  nomadbsd-dmconfig-gui_es.ts  nomadbsd-dmconfig-gui_hi.ts  nomadbsd-dmconfig-gui_hu.ts  nomadbsd-dmconfig-gui_it.ts  nomadbsd-dmconfig-gui_ja.ts  nomadbsd-dmconfig-gui_ko.ts  nomadbsd-dmconfig-gui_pl.ts  nomadbsd-dmconfig-gui_pt.ts  nomadbsd-dmconfig-gui_tr.ts  nomadbsd-dmconfig-gui_uk.ts  nomadbsd-dmconfig-gui_zh.ts
src/: main.cpp  mainwin.cpp  mainwin.h
